--- a/react/package.json
+++ b/react/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.19.3",
     "bootstrap": "^5.3.3",
     "browser-env": "^3.3.0",
     "next": "14.1.4",
