updates, about done with my part

--- a/react/package.json
+++ b/react/package.json
@@ -13,11 +13,18 @@
     "bootstrap": "^5.3.3",
     "browser-env": "^3.3.0",
     "dotenv": "^16.4.5",
+    "fs": "^0.0.1-security",
+    "geolib": "^3.3.4",
+    "i": "^0.3.7",
+    "net": "^1.0.2",
     "next": "14.1.4",
     "node-fetch": "^3.3.2",
+    "npm": "^10.6.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-router-dom": "^6.23.0"
+    "react-router-dom": "^6.23.0",
+    "tls": "^0.0.1",
+    "twilio": "^5.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
